[gd_scene load_steps=3 format=3 uid="uid://jjt067gyglcg"]

[ext_resource type="Script" path="res://Example-XmlNodes/TestScene.gd" id="1_wk8kh"]
[ext_resource type="Script" path="res://addons/XmlNodes/XmlNode.gd" id="2_ml2if"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wk8kh")

[node name="XML_TO_SAVE" type="TextEdit" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 11.0
offset_top = 55.0
offset_right = 408.0
offset_bottom = 650.0
theme_override_font_sizes/font_size = 20
text = "<root rootOption1=\"RO1\" rootOption2=\"RO2\">
	<!-- Comment -->
	Text in Root
	<NodeL1 L1Opt1=\"L1O1\" L1Opt2=\"L1O2\" L1Opt3=\"L1O3\">
		Text Node 1
	</NodeL1>
	<NodeL1 L1Opt1=\"A\" L1Opt2=\"B\">
		Text Node 2
		<NodeL2 L2Opt1=\"A\">VAL</NodeL2>
		<NodeL2 L2Opt2=\"B\">VAL</NodeL2>
		<NodeL2 L2Opt3=\"C\" />
		<NodeL2 L2Opt4=\"D\" />
		<NodeL2 TREE=\"D\" >
			<!-- Comment DEEP -->
			<A>Hello</A>
			<B>World</B>
			<C val=\"C\">!</C>
			<D>
				<X>
					<Y VAL=\"DEEP\">DEEP</Y>
				</X>
			</D>
			<CD>
				<![CDATA[---CDATA-Inhalt---]]>
			</CD>
		</NodeL2>
	</NodeL1>
</root>"
editable = false

[node name="XML_LOADED" type="TextEdit" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 427.0
offset_top = 166.0
offset_right = 994.0
offset_bottom = 989.0
theme_override_font_sizes/font_size = 20
placeholder_text = "xml will be load here!"
editable = false
wrap_mode = 1

[node name="XML_NODES_HERE" type="Node" parent="."]
unique_name_in_owner = true

[node name="XML_AS_NODES" type="Node" parent="."]
unique_name_in_owner = true

[node name="root" type="Node" parent="XML_AS_NODES"]
script = ExtResource("2_ml2if")
nodeattributes = {
"RootAtt1": "RootVal1",
"RootAtt2": "RottVal2"
}
nodeText = "Text"

[node name="Comment" type="Node" parent="XML_AS_NODES/root"]
script = ExtResource("2_ml2if")
nodeType = 4
nodeText = "This is a Comment"
tagName = ""

[node name="A1" type="Node" parent="XML_AS_NODES/root"]
script = ExtResource("2_ml2if")
tagName = "A1"

[node name="A2" type="Node" parent="XML_AS_NODES/root"]
script = ExtResource("2_ml2if")
nodeText = "A"
tagName = "A2"

[node name="A3" type="Node" parent="XML_AS_NODES/root"]
script = ExtResource("2_ml2if")
tagName = "A3"
noEndTag = true

[node name="A4" type="Node" parent="XML_AS_NODES/root"]
script = ExtResource("2_ml2if")
tagName = "A4"

[node name="CDATA" type="Node" parent="XML_AS_NODES/root/A4"]
script = ExtResource("2_ml2if")
nodeType = 5
nodeText = "CDATA-Data-Conent"
tagName = ""

[node name="XmlPath" type="TextEdit" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 135.0
offset_top = 5.0
offset_right = 409.0
offset_bottom = 49.0
text = "res://Example-XmlNodes/Test.xml"

[node name="BtnRunTest" type="Button" parent="."]
layout_mode = 0
offset_left = 13.0
offset_top = 6.0
offset_right = 130.0
offset_bottom = 51.0
text = "LOAD"

[node name="BtnLoadTestFile" type="Button" parent="."]
layout_mode = 0
offset_left = 603.0
offset_top = 6.0
offset_right = 792.0
offset_bottom = 51.0
text = "LOAD MIN"

[node name="BtnLoadTestFileDeep" type="Button" parent="."]
layout_mode = 0
offset_left = 430.0
offset_top = 4.0
offset_right = 583.0
offset_bottom = 49.0
text = "DEEP"

[node name="BtnLoadTestFileTesting" type="Button" parent="."]
layout_mode = 0
offset_left = 430.0
offset_top = 58.0
offset_right = 583.0
offset_bottom = 103.0
text = "Testing"

[node name="BtnNodeToText" type="Button" parent="."]
layout_mode = 0
offset_left = 806.0
offset_top = 9.0
offset_right = 987.0
offset_bottom = 52.0
text = "CODE NODES -> XML"

[node name="BtnEditorNodeToText" type="Button" parent="."]
layout_mode = 0
offset_left = 603.0
offset_top = 56.0
offset_right = 790.0
offset_bottom = 99.0
text = "EDITOR NODES -> XML"

[node name="BtnFancyCreate" type="Button" parent="."]
layout_mode = 0
offset_left = 806.0
offset_top = 60.0
offset_right = 986.0
offset_bottom = 101.0
text = "FANCY CODE->XML
"

[node name="BtnMoreFancyCreate" type="Button" parent="."]
layout_mode = 0
offset_left = 804.0
offset_top = 114.0
offset_right = 984.0
offset_bottom = 155.0
text = "BETTER -> XML"

[node name="BtnSearchTest" type="Button" parent="."]
layout_mode = 0
offset_left = 608.0
offset_top = 107.0
offset_right = 785.0
offset_bottom = 161.0
text = "SEARCH TEST"

[node name="SEARCH_TEST_NODES" type="Node" parent="."]

[node name="rootSearch" type="Node" parent="SEARCH_TEST_NODES"]
unique_name_in_owner = true
script = ExtResource("2_ml2if")
nodeattributes = {
"id": "root",
"name": "root"
}

[node name="SUB1" type="Node" parent="SEARCH_TEST_NODES/rootSearch"]
script = ExtResource("2_ml2if")
nodeattributes = {
"id": "SUB1",
"name": "SUB1"
}
tagName = "SUB1"

[node name="a" type="Node" parent="SEARCH_TEST_NODES/rootSearch/SUB1"]
script = ExtResource("2_ml2if")
nodeattributes = {
"id": "link",
"name": "x"
}
tagName = "a"

[node name="a2" type="Node" parent="SEARCH_TEST_NODES/rootSearch/SUB1"]
script = ExtResource("2_ml2if")
nodeattributes = {
"id": "link2",
"name": "x"
}
tagName = "a"

[node name="SUB2" type="Node" parent="SEARCH_TEST_NODES/rootSearch"]
script = ExtResource("2_ml2if")
nodeattributes = {
"id": "SUB2",
"name": "SUB2"
}
tagName = "SUB2"

[node name="a" type="Node" parent="SEARCH_TEST_NODES/rootSearch/SUB2"]
script = ExtResource("2_ml2if")
nodeattributes = {
"id": "link",
"name": "x"
}
tagName = "a"

[node name="a2" type="Node" parent="SEARCH_TEST_NODES/rootSearch/SUB2"]
script = ExtResource("2_ml2if")
nodeattributes = {
"id": "link2",
"name": "x"
}
tagName = "a"

[node name="SUB3" type="Node" parent="SEARCH_TEST_NODES/rootSearch"]
script = ExtResource("2_ml2if")
nodeattributes = {
"id": "SUB3",
"name": "SUB3"
}
tagName = "SUB3"

[node name="a" type="Node" parent="SEARCH_TEST_NODES/rootSearch/SUB3"]
script = ExtResource("2_ml2if")
nodeattributes = {
"id": "link",
"name": "x"
}
tagName = "a"

[node name="a2" type="Node" parent="SEARCH_TEST_NODES/rootSearch/SUB3"]
script = ExtResource("2_ml2if")
nodeattributes = {
"id": "link2",
"name": "x"
}
tagName = "a"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 18.0
offset_top = 656.0
offset_right = 395.0
offset_bottom = 679.0
text = "EVENT - PRE WRITE - SET DATA IN TEXT:"

[node name="Label2" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 17.0
offset_top = 817.0
offset_right = 394.0
offset_bottom = 840.0
text = "Attribut: TESTATT:"

[node name="txtNodeText1" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 685.0
offset_right = 410.0
offset_bottom = 721.0
text = "Text in node 1"
placeholder_text = "add A text in node 1"

[node name="txtNodeText2" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 17.0
offset_top = 726.0
offset_right = 411.0
offset_bottom = 762.0
placeholder_text = "add A text in node 2"

[node name="txtNodeText3" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 17.0
offset_top = 766.0
offset_right = 411.0
offset_bottom = 802.0
text = "More Text in node 3"
placeholder_text = "add A text in node 3"

[node name="txtAttEvent" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 18.0
offset_top = 848.0
offset_right = 412.0
offset_bottom = 884.0
text = "AttributeValue"
placeholder_text = "value"

[node name="BtnEventRun" type="Button" parent="."]
layout_mode = 0
offset_left = 21.0
offset_top = 896.0
offset_right = 183.0
offset_bottom = 976.0
text = "RUN WITH EVENTS"

[node name="EventRoot" type="Node" parent="BtnEventRun"]
unique_name_in_owner = true
script = ExtResource("2_ml2if")
tagName = "eventRoot"

[node name="node1" type="Node" parent="BtnEventRun/EventRoot"]
script = ExtResource("2_ml2if")
tagName = "node1"

[node name="node2" type="Node" parent="BtnEventRun/EventRoot"]
script = ExtResource("2_ml2if")
tagName = "node2"

[node name="node3" type="Node" parent="BtnEventRun/EventRoot"]
script = ExtResource("2_ml2if")
tagName = "node3"

[connection signal="button_up" from="BtnRunTest" to="." method="_on_btn_run_test_button_up"]
[connection signal="button_up" from="BtnLoadTestFile" to="." method="_on_btn_load_test_file_button_up"]
[connection signal="button_up" from="BtnLoadTestFileDeep" to="." method="_on_btn_load_test_file_deep_button_up"]
[connection signal="button_up" from="BtnLoadTestFileTesting" to="." method="_on_btn_load_test_file_testing_button_up"]
[connection signal="button_up" from="BtnNodeToText" to="." method="_on_btn_node_to_text_button_up"]
[connection signal="button_up" from="BtnEditorNodeToText" to="." method="_on_btn_editor_node_to_text_button_up"]
[connection signal="button_up" from="BtnFancyCreate" to="." method="_on_btn_fancy_create_button_up"]
[connection signal="button_up" from="BtnMoreFancyCreate" to="." method="_on_btn_more_fancy_create_button_up"]
[connection signal="button_up" from="BtnSearchTest" to="." method="_on_btn_search_test_button_up"]
[connection signal="button_up" from="BtnEventRun" to="." method="_on_btn_event_run_button_up"]
[connection signal="prewrite" from="BtnEventRun/EventRoot" to="." method="_on_event_root_prewrite"]
[connection signal="prewrite" from="BtnEventRun/EventRoot/node1" to="." method="_on_event_root_prewrite"]
[connection signal="prewrite" from="BtnEventRun/EventRoot/node2" to="." method="_on_event_root_prewrite"]
[connection signal="prewrite" from="BtnEventRun/EventRoot/node3" to="." method="_on_event_root_prewrite"]
